--- a/style.css
+++ b/style.css
@@ -1,50 +1,23 @@
-/* Style the tab */
-.tab {
-    overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
-    
-  }
-  
-  /* Style the buttons that are used to open the tab content */
-  .tab button {
-    background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
-  }
-  
-  /* Change background color of buttons on hover */
-  .tab button:hover {
-    background-color: #ddd;
-  }
-  
-  /* Create an active/current tablink class */
-  .tab button.active {
-    background-color: #ccc;
-  }
-  
-  /* Style the tab content */
-  .One {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
+.tabContent{
+      height: 500px;
+      width: 90%;
+      border: 1px solid grey;
+      padding: 25px;
   }
 
-  .Two {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
+
+  button{
+      width: 100px;
+      height: 28px;
+      border-radius: 5px 5px 0px 0px;
+      background-color: lightgray;
+      border: none;
+      color: #666;
+      font-size: 10px;
+      margin-right: 10px;
+      letter-spacing: 1px;
+      line-height: 10px;
+
   }
 
-  .Three {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
-  }
+  
